# vitaledge-py

./: .gitignore  CLA.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: advanced_cyber_threat_detection.py  basic_usage.py  intermediate_movie_recommendation.py
scripts/: gen_proto.sh
vitaledge/: __init__.py  client.py
vitaledge/_proto/: __init__.py
vitaledge/_proto/v1/: __init__.py  query_pb2.py  query_pb2_grpc.py
